# language-dataset-crew

./: .env.example  .gitignore  EXAMPLE_README.md  README.md  example.py  pyproject.toml
src/dataset_crew/: crew.py  main.py
src/dataset_crew/config/: agents.yaml  tasks.yaml
src/dataset_crew/tools/: custom_tool.py  dataset_tool.py
